--- a/main.html
+++ b/main.html
@@ -33,17 +33,49 @@
               </ul>
               <ul class="navbar-nav ml-auto">
               <li><a class="nav-link" href="#">Student Portal</a></li>
-              <li><a class="nav-link" href="#">contact us</a></li>
+              <li><a class="nav-link" href="Contact.html">Contact us</a></li>
               </ul>
             </div>
           </nav>
     </header>
+    <video src="images\video.mp4" muted loop autoplay></video>
+    <div class="text">
+      <h2>Welcome to RC Collage</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime facere nulla, quas perferendis ad dolorum dolore unde suscipit ex beatae voluptate corrupti hic voluptatibus debitis facilis culpa dignissimos doloremque blanditiis!</p>
+      <a href="#">Explore</a>
+    </div>
     <footer>
         <div class="footer">
             <div class="footer-content">
-              <div class="footer-section about"></div> 
-              <div class="footer-section links"></div> 
-              <div class="footer-section review"></div> 
+              <div class="container">
+                <div class="footer-cols">
+                    <ul><li><img src="images\RClogo.png" width="350px" height="70px"></img></li>
+                        <li><a>ZZZZ Workspace</a></li>
+                        <li><a>Street 43,buliding 4A</a></li>
+                        <li><a>Industrial Area</a></li>
+                        <li><ul class="social">
+                          <li><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+                          <li><a href="https://twitter.com/login"><i class="fab fa-twitter-square"></i></a></li>
+                          <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
+                          <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
+                         </ul></li>
+                    </ul>
+                    <ul><li>Quick Link</li>
+                            <li><a>XYZ org</a></li>
+                            <li><a>ABC org</a></li>
+                            <li><a>UK org</a></li>
+                            <li><a>Qwerty Corp</a></li>
+                            <li><a>ZAQ PVT</a></li>
+                    </ul> 
+                    <ul><li>Contact Us:</li>
+                        <li><a>HTML5,CSS,JS</a></li>
+                        <li><a>React</a></li>
+                        <li><a>Angular</a></li>
+                        <li><a>NodeJS</a></li>
+                        <li><a>Django</a></li>
+                    </ul>
+                </div>
+            </div>
             </div>
             <div class="footer-bottom">&copy;hello</div>
         </div>
