--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,20 +26,21 @@
                   <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Events</a>
+                  <a class="nav-link" href="EventPage.html">Events</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Gallery</a>
+                  <a class="nav-link" href="gallery.html">Gallery</a>
                 </li>
               </ul>
               <ul class="navbar-nav ml-auto">
               <li><a class="nav-link" href="#">Student Portal</a></li>
               <li><a class="nav-link" href="Contact.html">Contact us</a></li>
               </ul>
+              
             </div>
           </nav>
     </header>
-    <video src="images\video.mp4" muted loop autoplay></video>
+    <video src="images\video.mp4" muted loop autoplay style="height: 100px;width: 100px;"></video>
     <div class="text">
       <h2>Welcome to RC Collage</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime facere nulla, quas perferendis ad dolorum dolore unde suscipit ex beatae voluptate corrupti hic voluptatibus debitis facilis culpa dignissimos doloremque blanditiis!</p>
@@ -50,36 +52,26 @@
               <div class="container">
                 <div class="footer-cols">
                     <ul><li><img src="images\RClogo.png" width="350px" height="70px"></img></li>
-                        <li><a>ZZZZ Workspace</a></li>
-                        <li><a>Street 43,buliding 4A</a></li>
-                        <li><a>Industrial Area</a></li>
-                        <li><ul class="social">
-                          <li><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
-                          <li><a href="https://twitter.com/login"><i class="fab fa-twitter-square"></i></a></li>
-                          <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
-                          <li><a href="#"><i class="fab fa-google-plus-square"></i></a></li>
-                         </ul></li>
-                    </ul>
+                        <li><h3>About the collage</h3></li>
+                        <li><a>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum sunt accusantium quae libero assumenda incidunt dolorum! Sit deleniti aperiam enim vel repellendus. Enim esse tempore assumenda quo dignissimos. Voluptatum, voluptatem.</a></li>
+                      </ul>
                     <ul><li>Quick Link</li>
-                            <li><a>XYZ org</a></li>
-                            <li><a>ABC org</a></li>
-                            <li><a>UK org</a></li>
-                            <li><a>Qwerty Corp</a></li>
-                            <li><a>ZAQ PVT</a></li>
+                      <li style="font-size:20px"><i class="fa fa-phone"></i>  +91 1234567890</li>
+                      <li style="font-size:20px"><i class=" fa fa-map-marker"></i>  Lorem ipsum dolor sit amet </li>
+                      <li style="font-size:20px"><i class=" fa fa-envelope" aria-hidden="true"></i> abc@gmail.com</li>
                     </ul> 
-                    <ul><li>Contact Us:</li>
-                        <li><a>HTML5,CSS,JS</a></li>
-                        <li><a>React</a></li>
-                        <li><a>Angular</a></li>
-                        <li><a>NodeJS</a></li>
-                        <li><a>Django</a></li>
-                    </ul>
+                    <ul><li></li>
+                      <li ><a href="https://www.facebook.com/"><i class="fa fa-facebook-square" aria-hidden="true" style="font-size: 50px;"></i></a></li>
+                      <li ><a href="https://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true" style="font-size: 50px;"></i></a></li>
+                      <li ><a href="https://github.com/" ><i class="fa fa-github" aria-hidden="true" style="font-size: 50px;"></i> </a></li>
+                      <li > <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true" style="font-size: 50px;"></i></a> </li>
+                    </ul> 
                 </div>
             </div>
             </div>
-            <div class="footer-bottom">&copy;hello</div>
+            <div class="footer-bottom">&copy;made for learning purpose</div>
         </div>
     </footer>
     
 </body>
-</html>
+</html> 
