--- a/main.html
+++ b/main.html
@@ -39,33 +39,70 @@
               
             </div>
           </nav>
+          <div class="row"> 
+            <div class="col-12">
+                  <h2>Welcome to RC Collage</h2>
+                  <div class="row">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime facere nulla, quas perferendis ad dolorum dolore unde suscipit ex beatae voluptate corrupti hic voluptatibus debitis facilis culpa dignissimos doloremque blanditiis!</p>
+                  </div>
+                  <a class="btn px-4 py-2 mt-4">Explore</a>
+                </div>
+              </div>
+            </div>
+          </div>
     </header>
-    <video src="images\video.mp4" muted loop autoplay style="height: 100px;width: 100px;"></video>
-    <div class="text">
-      <h2>Welcome to RC Collage</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime facere nulla, quas perferendis ad dolorum dolore unde suscipit ex beatae voluptate corrupti hic voluptatibus debitis facilis culpa dignissimos doloremque blanditiis!</p>
-      <a href="#">Explore</a>
+    <div id="carouselIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/1.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/2.jpeg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/3.jpeg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
     <footer>
         <div class="footer">
             <div class="footer-content">
               <div class="container">
+                
                 <div class="footer-cols">
+                  <div class="row">
+                    <div class="col-sm-5">
                     <ul><li><img src="images\RClogo.png" width="350px" height="70px"></img></li>
                         <li><h3>About the collage</h3></li>
                         <li><a>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum sunt accusantium quae libero assumenda incidunt dolorum! Sit deleniti aperiam enim vel repellendus. Enim esse tempore assumenda quo dignissimos. Voluptatum, voluptatem.</a></li>
-                      </ul>
-                    <ul><li>Quick Link</li>
+                      </ul></div>
+                      <div class="col-sm-4">  
+                    <ul><li>Contact</li>
                       <li style="font-size:20px"><i class="fa fa-phone"></i>  +91 1234567890</li>
                       <li style="font-size:20px"><i class=" fa fa-map-marker"></i>  Lorem ipsum dolor sit amet </li>
                       <li style="font-size:20px"><i class=" fa fa-envelope" aria-hidden="true"></i> abc@gmail.com</li>
-                    </ul> 
+                    </ul> </div>
+                    <div class="col-sm-3">
                     <ul><li></li>
                       <li ><a href="https://www.facebook.com/"><i class="fa fa-facebook-square" aria-hidden="true" style="font-size: 50px;"></i></a></li>
                       <li ><a href="https://twitter.com/"> <i class="fa fa-twitter" aria-hidden="true" style="font-size: 50px;"></i></a></li>
                       <li ><a href="https://github.com/" ><i class="fa fa-github" aria-hidden="true" style="font-size: 50px;"></i> </a></li>
                       <li > <a href="https://www.linkedin.com/"><i class="fa fa-linkedin" aria-hidden="true" style="font-size: 50px;"></i></a> </li>
-                    </ul> 
+                    </ul> </div>
+                    </div>
                 </div>
             </div>
             </div>
