--- a/gallery.html
+++ b/gallery.html
@@ -171,7 +171,7 @@ img.hover-shadow {
     height: 50px;
     width:100% ;
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0px;
     left: 0px;
     padding-top: 20px;
@@ -328,6 +328,11 @@ function showSlide(n) {
       </div>
     </div>
   </div>
-  <div class="footer-bottom">&copy;made for learning purpose</div>
+  <footer>
+    <div class="footer">
+  <div class="footer-bottom">&copy;made for learning purpose @Ruchika</div>
+  </div>
+</footer>
+
 </body>
 </html>
