--- a/EventPage.html
+++ b/EventPage.html
@@ -22,7 +22,7 @@
     height: 50px;
     width:100% ;
     text-align: center;
-    position: absolute;
+    position: relative;
     bottom: 0px;
     left: 0px;
     padding-top: 20px;
@@ -112,7 +112,7 @@
       </div>
       <footer>
         <div class="footer">
-      <div class="footer-bottom">&copy;made for learning purpose</div>
+      <div class="footer-bottom">&copy;made for learning purpose @Ruchika</div>
       </div>
     </footer>
 </body>
