--- a/EventPage.html
+++ b/EventPage.html
@@ -48,7 +48,7 @@
     <div class="row">
         <div class="col-md-4">
         <div class="card" style="width:400px">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="images/banner.jpg" alt="Card image" style="width:100%;height: 200px;">
         <div class="card-body">
           <h4 class="card-title">Event 1</h4>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur asperiores velit laborum veniam eveniet, saepe laboriosam assumenda, veritatis ipsam quis, ratione dicta voluptate sunt voluptatem nostrum nobis id fuga tempore.</p>
@@ -58,7 +58,7 @@
       </div>
       <div class="col-md-4">
         <div class="card" style="width:400px">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="images/7.jpg" alt="Card image" style="width:100%;height: 200px;">
         <div class="card-body">
           <h4 class="card-title">Event 2</h4>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas consequatur sint vitae voluptates dolore beatae expedita incidunt alias temporibus, ex fugiat veritatis exercitationem labore consequuntur suscipit a, ut id cumque?</p>
@@ -68,7 +68,7 @@
       </div>
       <div class="col-md-4">
         <div class="card" style="width:400px">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="images/5.jpeg" alt="Card image" style="width:100%;height: 200px;">
         <div class="card-body">
           <h4 class="card-title">Event 3</h4>
           <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem laboriosam sed delectus? Mollitia aliquid suscipit non est officiis tempora deserunt illo! Explicabo error id corporis praesentium repellendus consequatur quod consectetur!</p>
@@ -80,7 +80,7 @@
       <div class="row">
         <div class="col-md-4">
         <div class="card" style="width:400px">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="images/4.jpeg" alt="Card image" style="width:100%;height: 200px;">
         <div class="card-body">
           <h4 class="card-title">Event 4</h4>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto, quas praesentium molestias quasi quia, aliquam nam eligendi similique amet soluta harum iure quos alias velit ut sapiente nostrum omnis necessitatibus?</p>
@@ -90,7 +90,7 @@
       </div>
       <div class="col-md-4">
         <div class="card" style="width:400px;height: max-content;">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="images/3.jpeg" alt="Card image" style="width:100%;;height: 200px;">
         <div class="card-body">
           <h4 class="card-title">Event 5</h4>
           <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis consequuntur sunt quibusdam explicabo sed neque repellat, quod porro numquam, distinctio nesciunt pariatur suscipit beatae voluptatum vero consectetur mollitia quia unde.</p>
@@ -100,7 +100,7 @@
       </div>
       <div class="col-md-4">
         <div class="card" style="width:400px">
-        <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="images/2.jpeg" alt="Card image" style="width:100%;height: 200px;">
         <div class="card-body">
           <h4 class="card-title">Event 6</h4>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos doloremque excepturi, at aliquid tempore consequatur. Ullam quam aperiam reprehenderit odit sapiente totam minus tempora, quas iure, earum fugit voluptates magni.</p>
